# contacts

./: .gitignore  README.md  pyproject.toml
contacts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_address.py
core/: asgi.py  settings.py  urls.py  wsgi.py
src/contacts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_alter_contact_address.py
src/core/: asgi.py  settings.py  urls.py  wsgi.py
templates/: add.html  add_or_update.html  base.html  list.html
templates/messages/: index.html
